<resources>
    <string name="app_name">MuNews</string>
    <string name="nav_home">News</string>
    <string name="nav_offline_manager">知乎</string>
    <string name="nav_setting">选项</string>
    <string name="open_drawer">打开</string>
    <string name="close_drawer">关闭</string>
    <string name="drawer_group_content">资讯</string>
    <string name="zhihu">知乎</string>
    <string name="wechat">微信精选</string>
    <string name="gank">Gank</string>
    <string name="gold">热点新闻</string>
    <string name="vtex">V2EX</string>
    <string name="drawer_group_options">选项</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>
    <string name="retry_refresh_news">重新加载</string>
</resources>
