<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:title="@string/drawer_group_content">
        <menu>
            <item
                android:id="@+id/drawer_gold"
                android:icon="@mipmap/ic_drawer_gold"
                android:title="@string/gold"/>
            <item
                android:id="@+id/drawer_zhihu"
                android:icon="@mipmap/ic_drawer_zhihu"
                android:title="@string/zhihu"/>
            <item
                android:id="@+id/drawer_gank"
                android:icon="@mipmap/ic_drawer_gank"
                android:title="@string/gank"/>
            <item
                android:id="@+id/drawer_wechat"
                android:icon="@mipmap/ic_drawer_wechat"
                android:title="@string/wechat"/>
            <item
                android:id="@+id/drawer_vtex"
                android:icon="@mipmap/ic_drawer_vtex"
                android:title="@string/vtex"/>
        </menu>
    </item>
    </group>
    <item android:title="@string/drawer_group_options">
        <menu>
            <item
                android:id="@+id/drawer_like"
                android:icon="@mipmap/ic_drawer_like"
                android:title="@string/drawer_collection"/>
            <item
                android:id="@+id/drawer_setting"
                android:icon="@mipmap/ic_drawer_setting"
                android:title="@string/drawer_setting"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_drawer_about"
                android:title="@string/drawer_about"/>
        </menu>
    </item>
</menu>